--- a/Math_HW1.ipynb
+++ b/Math_HW1.ipynb
@@ -6,7 +6,7 @@
       "name": "Math HW1.ipynb",
       "provenance": [],
       "mount_file_id": "1_HyiyN-U5ChxPWQRBQ7c77i6w8lMhvEU",
-      "authorship_tag": "ABX9TyOI3ntbOWshsbP+fpTyn9Ht",
+      "authorship_tag": "ABX9TyNCXsqRaUOhMowK/FjxtpJI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Chapter 1.  Programming Challenge 1 page 22, Even-Odd Vending Machine"
+        "---\n",
+        "#####**Programming Challenge 1: Even-Odd Vending Machine**\n",
+        "---\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "-vb0DK4QoeDl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Try writing an \"even-odd vending machine\", which will take a number as input and do two things:\n",
+        "\n",
+        "1. Print whether the number is even or odd\n",
+        "2. Display the number followed by the next 9 even or odd numbers \n",
+        "\n",
+        "Your program should use the *is_integer()* method to display an error message if the input is a number with significant digits beyond the decimal point."
+      ],
+      "metadata": {
+        "id": "o2D_wnaoqFj5"
       }
     },
     {
@@ -43,27 +61,36 @@
         "def vending(x):\n",
         "    '''takes an int and prints even or odd'''\n",
         "    '''prints the following 9 even or odd numbers'''\n",
-        "    count = 0 # initialize count\n",
-        "    list = [x] # initialize list with x value\n",
-        "    if x % 2 == 0:\n",
-        "        while count < 9:\n",
-        "            list.append(x+2)\n",
-        "            x += 2\n",
-        "            count += 1\n",
-        "        print(\"The number is even:\")\n",
-        "        print(*list, sep=\", \")   \n",
-        "    else:\n",
-        "        while count < 9:\n",
-        "            list.append(x+2)\n",
-        "            x += 2\n",
-        "            count +=1\n",
-        "        print(\"The number is odd:\")\n",
-        "        print(*list, sep=\", \")"
+        "\n",
+        "    try: # check for number\n",
+        "      x = float(x)\n",
+        "      x.is_integer() == True\n",
+        "      x = int(x)\n",
+        "\n",
+        "      count = 0 # initialize count\n",
+        "      list = [x] # initialize list with x value\n",
+        "      if x % 2 == 0:\n",
+        "          while count < 9:\n",
+        "              list.append(x+2)\n",
+        "              x += 2\n",
+        "              count += 1\n",
+        "          print(\"The number is even:\")\n",
+        "          print(*list, sep=\", \")   \n",
+        "      else:\n",
+        "          while count < 9:\n",
+        "              list.append(x+2)\n",
+        "              x += 2\n",
+        "              count +=1\n",
+        "          print(\"The number is odd:\")\n",
+        "          print(*list, sep=\", \")\n",
+        "      \n",
+        "    except ValueError:\n",
+        "      print(\"Invalid entry. Please enter a number\")"
       ],
       "metadata": {
         "id": "YMjC6J0Homse"
       },
-      "execution_count": 2,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -76,9 +103,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tVW6ewyFovcm",
-        "outputId": "35be45de-cc2d-45c6-c53a-ddc437787898"
+        "outputId": "d0978f0a-668f-4c76-fc10-31edc3749ecf"
       },
-      "execution_count": 3,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,10 +120,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Chapter 2.  Programming Challenge 2 page 55, Exploring a Quadratic Function Visually"
+        "---\n",
+        "#####**Programming Challenge 2: Exploring a Quadratic Function Visually**\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
-        "id": "sYXyffMQpGWq"
+        "id": "lrlVodlUobaU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Your programming challenge is to enhance this program to create a graph of the function. Try using at least 10 values for x instead of the 6 above. Calculate the corresponding y values using the function and then create a graph using these two sets of values.\n",
+        "\n",
+        "Once you’ve created the graph, spend some time analyzing how the value of y varies with respect to x. Is the variation linear or nonlinear?"
+      ],
+      "metadata": {
+        "id": "YnBf8AslvcRq"
       }
     },
     {
@@ -156,10 +197,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Chapter 3.  Programming Challenge 2 page 89, Statistics Calculator"
+        "---\n",
+        "#####**Programming Challenge 3:Statistics Calculator**\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "OJ-KIlidpnkW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Implement a statistics calculator that takes a list of numbers in the file mydata.txt and then calculates and prints their mean, median, mode, variance, and standard deviation using the functions we wrote earlier in this chapter."
+      ],
+      "metadata": {
+        "id": "1ACxEt3CwjoK"
       }
     },
     {
@@ -258,10 +311,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Chapter 4.  Programming Challenge 4 page 117, Solving Single-Variable Inequalities"
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "#####**Programming Challenge 4: Solving Single-Variable Inequalities**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "4cDfCesV0Yxc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For this challenge, create a function, isolve(), that will take any inequality, solve it, and then return the solution."
+      ],
+      "metadata": {
+        "id": "Y_PkcgtHw3uH"
       }
     },
     {
@@ -426,7 +501,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Chapter 5.  Programming Challenge 2 page 143, Law of Large Numbers"
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "#####**Programming Challenge 5: Law of Large Numbers**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "srqEQWLDIMHP"
@@ -435,7 +520,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        ">According to the law of large numbers, the average value of results over multiple trials approaches the expected value as the number of trials increases. Your challenge in this task is to verify this law when rolling a six-sided die for the following number of trials: 100, 1000, 10000, 100000, and 500000"
+        "According to the law of large numbers, the average value of results over multiple trials approaches the expected value as the number of trials increases. \n",
+        "\n",
+        "Your challenge in this task is to verify this law when rolling a six-sided die for the following number of trials: 100, 1000, 10000, 100000, and 500000."
       ],
       "metadata": {
         "id": "AP_VLlojJYGw"
@@ -505,7 +592,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Chapter 7.  Programming Challenge 2 page 205, Implement the Gradient Descent"
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "#####**Programming Challenge 6: Implement the Gradient Descent**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "WL9gDdshRMq9"
@@ -514,7 +610,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        ">*Implement a generic program using the gradient descent algorithm to find the minimum value of a single-variable function specified as input by the user. The program should also create a graph of the function and show all the intermediate values it found before finding the minimum.*"
+        "Implement a generic program using the gradient descent algorithm to find the minimum value of a single-variable function specified as input by the user. The program should also create a graph of the function and show all the intermediate values it found before finding the minimum."
       ],
       "metadata": {
         "id": "UZcbMaRXTtu4"
